# cli-candlestick-chart

./: Cargo.toml  README.md
examples/: basic-with-csv-parsing.rs  fetch-from-binance.rs
src/: chart.rs  chart_data.rs  chart_renderer.rs  info_bar.rs  volume_pane.rs
